--- a/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/cliente-consulta/cliente-consulta.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-success paddingText">Consultar clientes registrados.</h2>
+<h2 class="text-success paddingText">Clientes.</h2>
 
 <div class="row paddingText">
 
