--- a/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/ingreso/ingreso.component.html
@@ -5,7 +5,7 @@
   <div class="col-md-4 offset-md-3 card border-success padding margen justify-content-center" >
   
     <div class="header">
-      <h2 class="text-success title" >Login</h2>
+      <h2 class="text-success title text-center" >Ingresar</h2>
     </div>
   <form [formGroup]="formGroup" id="Padding">
   
