--- a/floridaimportdotnet/ClientApp/src/app/florida/producto-editar/producto-editar.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/producto-editar/producto-editar.component.html
@@ -65,8 +65,8 @@
   </div>
   
     <div class="text-center">
-        <button class="btn btn-primary mr-1" (click)="update()" >Actualizar</button>
-        <button class="btn btn-primary mr-1" (click)="delete()">Eliminar</button>
+        <button class="btn btn-success mr-1" (click)="update()" >Actualizar</button>
+        <button class="btn btn-success mr-1" (click)="delete()">Eliminar</button>
         <button class="btn btn-secondary" type="reset">Cancel</button>
     </div>
     
