--- a/floridaimportdotnet/ClientApp/src/app/home/home.component.css
+++ b/floridaimportdotnet/ClientApp/src/app/home/home.component.css
@@ -15,10 +15,18 @@ p{
     padding-top: 10%;
 }
 
+.Padding1{
+    padding-top: 5%;
+}
+
 .margenPlus{
     margin-left: 40px;
 }
 
-.margenAdd{
+.CCC{
     margin-right: 40px;
+}
+
+.Paggingbootm{
+    margin-bottom: 5%;
 }
