--- a/floridaimportdotnet/ClientApp/src/app/florida/pedido-registro/pedido-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/pedido-registro/pedido-registro.component.html
@@ -104,7 +104,7 @@
         <h2 class="text-success paddingText">Registro de pago</h2>
     </div>
     <hr>
-    <div class="col-sm-12 d-flex justify-content-center" >
+    <div class="col-sm-12 d-flex justify-content-center" *ngIf="cliente.pais">
 
         <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
@@ -119,6 +119,10 @@
           </svg>
         <label >&nbsp;&nbsp;{{cliente.direccion}}&nbsp;&nbsp;</label>
         <label >{{cliente.barrio}}&nbsp;&nbsp;</label>
+        <a class="btn btn-success mr-1" role="button" routerLink='/agregarUbicacion/{{cliente.correo}}'>Modificar ubicación</a>
+    </div>
+    <div *ngIf="cliente.pais==null">
+        <a class="btn btn-success mr-1" role="button" routerLink='/agregarUbicacion/{{cliente.correo}}'>Agregar ubicación</a>
     </div>
     <hr>
     <div class="col-sm-12 d-flex justify-content-center" >
@@ -134,10 +138,10 @@
     <div class="col-sm-12 d-flex justify-content-center">
         <div class="row">
             <div class="col">
-                <button class="btn btn-secondary" role="button" (click)="atras()">&laquo; Atrás</button>
+                <button class="btn btn-secondary" role="button" (click)="atras()">&laquo;Atrás</button>
             </div>
-            <div class="col">
-                <button class="btn btn-secondary" role="button" (click)="postPedido()">Reistrar pago &raquo;</button>
+            <div class="col" *ngIf="cliente.pais">
+                <button class="btn btn-secondary" role="button" (click)="postPedido()">Pagar&raquo;</button>
             </div>
         </div>
     </div>
