--- a/floridaimportdotnet/ClientApp/src/app/florida/persona-perfil/persona-perfil.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/persona-perfil/persona-perfil.component.html
@@ -6,13 +6,29 @@
             <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
           </svg>
         Perfil
-      </h5> 
+      </h5>
+      <div *ngIf="cliente.pais">
+
+          <svg class="bi bi-geo-alt" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
+          </svg>
+  
+          <label >&nbsp;&nbsp;{{cliente.pais}}&nbsp;&nbsp;</label>
+          <label >{{cliente.ciudad}}&nbsp;&nbsp;</label>
+          <br>
+          <svg class="bi bi-house-door" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z"/>
+              <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+            </svg>
+          <label >&nbsp;&nbsp;{{cliente.direccion}}&nbsp;&nbsp;</label>
+          <label >{{cliente.barrio}}&nbsp;&nbsp;</label>
+      </div> 
     </div>   
     <div class="col padding">
       <div class="row">
         <div>
           <h2 class="title text-success">
-            Informacion del usuario:
+            Información del usuario:
           </h2>
           <form >
             <div class="form-group">
@@ -46,7 +62,11 @@
             </div>
           </div>
           <div *ngIf="isEnabled==true">
-            <div class="text-center">
+            <div class="text-center" *ngIf="cliente.pais">
+              <a class="btn btn-success mr-1" role="button" routerLink='/agregarUbicacion/{{cliente.correo}}'>Modificar ubicación</a>
+              <button class="btn btn-success mr-1" (click)="habilitarBoton()">Editar perfil</button>
+            </div>
+            <div class="text-center" *ngIf="cliente.pais == null">
               <a class="btn btn-success mr-1" role="button" routerLink='/agregarUbicacion/{{cliente.correo}}'>Agregar ubicación</a>
               <button class="btn btn-success mr-1" (click)="habilitarBoton()">Editar perfil</button>
             </div>
@@ -63,3 +83,8 @@
           </div>
       </div>
   </div>
+  <br>
+  <hr>
+  <footer class="container">
+    <p>&copy; Company 2017-2019</p>
+  </footer>
