--- a/floridaimportdotnet/ClientApp/src/app/home/home.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="rol=='Admin'; else noAdmin">
     <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Informe</h1>
+        <h1 class="h2"></h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group mr-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -14,6 +14,68 @@
     </main>
   </div>
 <ng-template #noAdmin>
+  <div class="Padding1" *ngIf="rol=='Prove'; else noProve">
+    <div class="row">
+      <div class="col">
+        <h5>
+          <svg class="bi bi-person-bounding-box" width="7em" height="7em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M1.5 1a.5.5 0 00-.5.5v3a.5.5 0 01-1 0v-3A1.5 1.5 0 011.5 0h3a.5.5 0 010 1h-3zM11 .5a.5.5 0 01.5-.5h3A1.5 1.5 0 0116 1.5v3a.5.5 0 01-1 0v-3a.5.5 0 00-.5-.5h-3a.5.5 0 01-.5-.5zM.5 11a.5.5 0 01.5.5v3a.5.5 0 00.5.5h3a.5.5 0 010 1h-3A1.5 1.5 0 010 14.5v-3a.5.5 0 01.5-.5zm15 0a.5.5 0 01.5.5v3a1.5 1.5 0 01-1.5 1.5h-3a.5.5 0 010-1h3a.5.5 0 00.5-.5v-3a.5.5 0 01.5-.5z" clip-rule="evenodd"/>
+              <path fill-rule="evenodd" d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
+            </svg>
+          Perfil
+        </h5> 
+      </div>   
+      <div class="col padding">
+        <div class="row">
+          <div>
+            <h2 class="title text-success Paggingbootm">
+              Información del usuario:
+            </h2>
+            <form >
+              <div class="form-group">
+                <label>Identificación: &nbsp;&nbsp;&nbsp;&nbsp;</label>
+                <label>{{ proveedor.identificacion}}</label>
+              </div>
+            <div class="row"> 
+              <div class="form-group col">
+                <label>Nombre</label>
+                <input type="text" name="nombre" [(ngModel)]="proveedor.nombre" class="form-control" [disabled]="isEnabled"/>
+              </div>
+              <div class="form-group col">
+              <label>Descripción</label>
+                <textarea type="text" name="descripcion" [(ngModel)]="proveedor.descripcion" class="form-control" [disabled]="isEnabled"></textarea>
+              </div>
+            </div>
+            <div class="row"> 
+              <div class="form-group col">
+                <label>Correo</label>
+                <input type="email" name="correo" [(ngModel)]="proveedor.correo" class="form-control" disabled/>
+              </div>
+            </div>
+            <div *ngIf="isEnabled==true">
+              <div class="text-center">
+                <button class="btn btn-success mr-1" (click)="habilitarBoton()">Editar perfil</button>
+              </div>
+            </div>
+            <div *ngIf="isEnabled!=true">
+              <div class="text-center">
+                <button class="btn btn-success mr-1" (click)="update()">Guardar cambios</button>
+                <button class="btn btn-secondary mr-1" (click)="cancel2()">Cancelar</button>
+              </div>
+            </div>
+            <br>
+            <hr>
+            <div class="col-sm-12 d-flex justify-content-center">
+              <a class="text-success text-center" routerLink='/productoProveedorConsulta/{{id}}'><h5>Consultar productos &raquo;</h5></a>
+            </div>
+            </form>
+          </div>
+            
+            </div>
+        </div>
+    </div>
+  </div>
+<ng-template #noProve>
 <ngb-carousel class="carrusel">
   <ng-template ngbSlide>
     <div class="picsum-img-wrapper">
@@ -271,6 +333,7 @@
   <hr>
 
 </div> <!-- /container -->
+</ng-template>
 </ng-template>
 
 <footer class="container">
