Cambiando el diseño del logo

--- a/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -8,7 +8,7 @@
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
         <p class="text-white">
-          <img src="./../../assets/Logo Florida Import.jpeg" alt="Random first slide" class="imagen" width="200" height="80">
+          <img src="./../../assets/Logo Florida Import.png" alt="Random first slide" class="imagen" width="200" height="80">
         </p>
       </a>
       <button
@@ -147,7 +147,7 @@
       <div class="container">
         <a class="navbar-brand" [routerLink]="['/']">
           <p class="text-white">
-            <img src="./../../assets/Logo Florida Import.jpeg" alt="Random first slide" class="imagen" width="200" height="80">
+            <img src="./../../assets/Logo Florida Import.png" alt="Random first slide" class="imagen" width="200" height="80">
           </p>
         </a>
         <button
@@ -243,7 +243,7 @@
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">
         <p class="text-white">
-          <img src="./../../assets/Logo Florida Import.jpeg" alt="Random first slide" class="imagen" width="200" height="80">
+          <img src="./../../assets/Logo Florida Import.png" alt="Random first slide" class="imagen" width="200" height="80">
         </p>
       </a>
       <button
