Corrección de error de registro de proveedor.

--- a/floridaimportdotnet/ClientApp/src/app/florida/cliente-registro/cliente-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/cliente-registro/cliente-registro.component.html
@@ -52,6 +52,7 @@
     <div *ngIf="control.identificacion.errors" class="invalid-feedback">
   
         <div *ngIf="control.identificacion.errors.required">Se require identificación</div>
+        <div *ngIf="control.identificacion.errors.pattern">La identificación debe ser numérica.</div>
         
       </div>
     
