--- a/floridaimportdotnet/ClientApp/src/app/florida/agregar-ubicacion/agregar-ubicacion.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/agregar-ubicacion/agregar-ubicacion.component.html
@@ -10,17 +10,15 @@
     
     <form [formGroup]="formGroup" id="Padding">
     
-    <div class="row">
+    <div *ngIf="modificar==true; else noModificar">
+      <div class="row">
     <div class="form-group col">
     
     <label>País</label>
     
-    <select name="pais" [(ngModel)]="cliente.pais" class="form-control border border-success" formControlName="pais" (change)="getCiudades()"
+    <select name="pais" class="form-control border border-success" formControlName="pais" (change)="getCiudades()"
     [ngClass]="{ 'is-invalid': control.pais.errors && formGroup.get('pais').touched}">
 
-    <option value="Seleccione">
-      
-    </option>
       <option *ngFor="let pais of paises" value={{pais.nombre}} >
           {{pais.nombre}}
         </option>
@@ -39,10 +37,11 @@
     
       <label>Ciudad</label>
   
-      <select name="ciudad" [(ngModel)]="cliente.ciudad" class="form-control border border-success" formControlName="ciudad"
+      <div class="input-group">
+      <select name="ciudad" class="form-control border border-success" formControlName="ciudad"
       [ngClass]="{ 'is-invalid': control.ciudad.errors && formGroup.get('ciudad').touched}">
       
-        <option value={{ciudad.nombre}} *ngFor="let ciudad of ciudades">
+        <option *ngFor="let ciudad of ciudades" selected={{ciudad.nombre}} >
             {{ciudad.nombre}}
           </option>
     
@@ -53,10 +52,62 @@
         <div *ngIf="control.ciudad.errors.required">Se require la ciudad.</div>
         
       </div>
+
+      <button class="btn btn-white border border-success" (click)="mod()">
+        <svg class="bi bi-arrow-repeat" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L2.5 8.207l1.646 1.647a.5.5 0 0 0 .708-.708l-2-2zm13-1a.5.5 0 0 0-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0 0-.708z"/>
+            <path fill-rule="evenodd" d="M8 3a4.995 4.995 0 0 0-4.192 2.273.5.5 0 0 1-.837-.546A6 6 0 0 1 14 8a.5.5 0 0 1-1.001 0 5 5 0 0 0-5-5zM2.5 7.5A.5.5 0 0 1 3 8a5 5 0 0 0 9.192 2.727.5.5 0 1 1 .837.546A6 6 0 0 1 2 8a.5.5 0 0 1 .501-.5z"/>
+          </svg>
+        </button>
     
     </div>
-  
   </div>
+  </div>
+  </div>
+  <ng-template #noModificar>
+    <div class="row">
+    <div class="form-group col">
+    
+      <label>País</label>
+      
+      <input name="pais" [(ngModel)]="cliente.pais" class="form-control border border-success" formControlName="pais" (change)="getCiudades()"
+      [ngClass]="{ 'is-invalid': control.pais.errors && formGroup.get('pais').touched}" disabled>
+  
+      <div *ngIf="control.pais.errors" class="invalid-feedback">
+    
+        <div *ngIf="control.pais.errors.required">Se require el país.</div>
+        
+      </div>
+      
+      </div>
+      
+      <div class="form-group col">
+      
+        <label>Ciudad</label>
+    
+        <div class="input-group">
+        <input name="ciudad" [(ngModel)]="cliente.ciudad" class="form-control border border-success" formControlName="ciudad"
+        [ngClass]="{ 'is-invalid': control.ciudad.errors && formGroup.get('ciudad').touched}" disabled>
+  
+        <div *ngIf="control.ciudad.errors" class="invalid-feedback">
+    
+          <div *ngIf="control.ciudad.errors.required">Se require la ciudad.</div>
+          
+        </div>
+  
+        <button class="btn btn-white border border-success" (click)="noMod()">
+          <svg class="bi bi-arrow-repeat" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M2.854 7.146a.5.5 0 0 0-.708 0l-2 2a.5.5 0 1 0 .708.708L2.5 8.207l1.646 1.647a.5.5 0 0 0 .708-.708l-2-2zm13-1a.5.5 0 0 0-.708 0L13.5 7.793l-1.646-1.647a.5.5 0 0 0-.708.708l2 2a.5.5 0 0 0 .708 0l2-2a.5.5 0 0 0 0-.708z"/>
+              <path fill-rule="evenodd" d="M8 3a4.995 4.995 0 0 0-4.192 2.273.5.5 0 0 1-.837-.546A6 6 0 0 1 14 8a.5.5 0 0 1-1.001 0 5 5 0 0 0-5-5zM2.5 7.5A.5.5 0 0 1 3 8a5 5 0 0 0 9.192 2.727.5.5 0 1 1 .837.546A6 6 0 0 1 2 8a.5.5 0 0 1 .501-.5z"/>
+            </svg>
+          </button>
+      
+      </div>
+    </div>
+  </div>
+  </ng-template>
+
+  
     <div class="row">
     <div class="form-group col">
     
@@ -113,6 +164,7 @@
       <div *ngIf="control.telefono.errors" class="invalid-feedback">
   
         <div *ngIf="control.telefono.errors.required">Se require el teléfono</div>
+        <div *ngIf="control.telefono.errors.pattern">Solo números.</div>
         
       </div>
       </div>
@@ -179,7 +231,7 @@
       <select name="ciudad" class="form-control border border-success" formControlName="ciudad"
       [ngClass]="{ 'is-invalid': control.ciudad.errors && formGroup.get('ciudad').touched}">
       
-        <option value={{ciudad.nombre}} *ngFor="let ciudad of ciudades">
+        <option *ngFor="let ciudad of ciudades" value={{ciudad.nombre}} >
             {{ciudad.nombre}}
           </option>
     
@@ -250,6 +302,7 @@
       <div *ngIf="control.telefono.errors" class="invalid-feedback">
   
         <div *ngIf="control.telefono.errors.required">Se require el teléfono</div>
+        <div *ngIf="control.telefono.errors.pattern">Solo números.</div>
         
       </div>
       </div>
