Subir imagenes a FireStore

--- a/floridaimportdotnet/ClientApp/src/app/florida/producto-registro/producto-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/producto-registro/producto-registro.component.html
@@ -44,7 +44,7 @@
   <div class="form-group" >
     <Label>Imágen</Label>
     <br>
-    <input type="file" accept=".png, .jpg" (change)="onSelectFile($event)"/>
+    <input type="file" accept=".png, .jpg" (change)="onPhotoSelected($event)"/>
   </div>
     <div class="row">
     <div class="form-group col">
