--- a/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.css
+++ b/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.css
@@ -12,3 +12,19 @@
     border-color: green;
     
   }
+
+  .footer {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    color: white;
+    /* Set the fixed height of the footer here */
+    min-height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #1A1A1A;
+  }
+
+  #margenFooter{
+      margin-left: 100px;
+  }
