--- a/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.html
+++ b/floridaimportdotnet/ClientApp/src/app/florida/pais-registro/pais-registro.component.html
@@ -88,6 +88,6 @@
     
     </div>
   
-    <footer class="container">
-      <p>&copy; Company 2017-2019</p>
+    <footer class="footer">
+      <p id="margenFooter">&copy; Company 2017-2019</p>
     </footer>
