--- a/floridaimportdotnet/ClientApp/src/app/florida/producto-consulta/producto-consulta.component.css
+++ b/floridaimportdotnet/ClientApp/src/app/florida/producto-consulta/producto-consulta.component.css
@@ -1,4 +1,4 @@
-.paddingText{
+.paddingText {
     padding-top: 5%;
 }
 
@@ -9,30 +9,29 @@
     border-bottom: 4;
     border-color: green;
     
-  }
+}
 
-  .footer {
+.footer {
     position: absolute;
     width: 100%;
     left: 0;
     color: white;
-    /* Set the fixed height of the footer here */
     min-height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px; 
     background-color: #1A1A1A;
     margin-top: 5%;
 }
 
-#margen{
+#margen {
     margin-left: 100px;
 }
 
-#noAdmin{
+#noAdmin {
     margin-top: 5%;
     margin-bottom: 3%;
 }
 
-.botonSB{
+.botonSB {
     border:0;
     outline:none;
     background-color: transparent;
